使用 Colab 创建而成

--- a/demo/mae_visualize.ipynb
+++ b/demo/mae_visualize.ipynb
@@ -168,6 +168,7 @@
         "# check whether run in Colab\n",
         "if 'google.colab' in sys.modules:\n",
         "    print('Running in Colab.')\n",
+        "    !pip3 install numpy<1.20\n",
         "    !pip3 install timm==0.4.5  # 0.3.2 does not work in Colab\n",
         "    !git clone https://github.com/facebookresearch/mae.git\n",
         "    sys.path.append('./mae')\n",
